syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.appwish.grpc";
option java_outer_classname = "VoteGRPC";

service VoteService {
  rpc GetAllVote (AllVoteQueryProto) returns (AllVoteReplyProto) {
  }
  rpc GetVote (VoteQueryProto) returns (VoteReplyProto) {
  }
  rpc CreateVote (VoteInputProto) returns (VoteReplyProto) {
  }
  rpc UpdateVote (UpdateVoteInputProto) returns (VoteReplyProto) {
  }
  rpc DeleteVote (VoteQueryProto) returns (VoteDeleteReplyProto) {
  }
}

message AllVoteQueryProto {
}

message VoteQueryProto {
  int64 id = 1;
}

message AllVoteReplyProto {
  repeated VoteProto votes = 1;
}

message VoteReplyProto {
  VoteProto vote = 1;
}

message VoteDeleteReplyProto {
  bool deleted = 1;
}

message ItemType {
  int64 WISH = 1;
  int64 COMMENT = 2;
}

message VoteType {
  int64 UP = 1;
  int64 DOWN = 2;
}

message VoteProto {
  int64 id = 1;
  int64 userId = 2;
  int64 itemId = 3;
  ItemType itemType = 4;
  string createdAt = 5;
  VoteType voteType = 6;
}

message VoteInputProto {
  int64 userId = 1;
  int64 itemId = 2;
  ItemType itemType = 3;
  VoteType voteType = 4;
}

message UpdateVoteInputProto {
  int64 userId = 1;
  int64 itemId = 2;
  ItemType itemType = 3;
  VoteType voteType = 4;
}
